--- a/service/service-customize/src/main/resources/application.yml
+++ b/service/service-customize/src/main/resources/application.yml
@@ -2,9 +2,6 @@ server:
   port: 8012
 
 spring:
-  data:
-    mongodb:
-      host:
-      username:
-      password:
+  application:
+    name: customize
 
