--- a/service/service-project/src/main/resources/application.yml
+++ b/service/service-project/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
 spring:
   application:
     name: project
-
-pms:
-  baseDir: file:\\D:\
+  cloud:
+    nacos:
+      config:
+        server-addr: 192.168.2.47:8848
+      discovery:
+        server-addr: 192.168.2.47:8848
