--- a/service/service-storage/src/main/resources/bootstrap.yml
+++ b/service/service-storage/src/main/resources/bootstrap.yml
@@ -1,8 +1,3 @@
-server:
-  port: 8003
-pms:
-  baseDir: file:\\D:\
-
 spring:
   application:
     name: storage
@@ -10,7 +5,7 @@ spring:
     nacos:
       config:
         server-addr: 192.168.2.47:8848
-        file-extension: yaml
+        file-extension: yml
       discovery:
         server-addr: 192.168.2.47:8848
       server-addr: 192.168.2.47:8848
