--- a/service/service-identity/src/main/resources/application.yml
+++ b/service/service-identity/src/main/resources/application.yml
@@ -8,5 +8,8 @@ spring:
     url: jdbc:mysql://localhost:3306/pms?serverTimezone=UTC
     username: root
     password: abc123
-  liquibase:
-    enabled: false
+  flyway:
+    enabled: true
+  cloud:
+    nacos:
+      server-addr: 192.168.2.112:8848
