nacos服务注册与发现2

--- a/service/service-storage/src/main/resources/application.yml
+++ b/service/service-storage/src/main/resources/application.yml
@@ -6,10 +6,6 @@ pms:
 spring:
   application:
     name: storage
-  cloud:
-    nacos:
-      config:
-        server-addr: 192.168.2.112:8848
-        file-extension: yaml
-      discovery:
-        server-addr: 192.168.2.112:8848
+  flyway:
+    placeholders:
+      prefix:
