--- a/service/service-storage/src/main/resources/bootstrap-corp.yml
+++ b/service/service-storage/src/main/resources/bootstrap-corp.yml
@@ -5,7 +5,7 @@ spring:
     nacos:
       config:
         file-extension: yml
-        group: PMS_DEV
+        group: DEFAULT_GROUP
       discovery:
-        group: PMS_DEV
-      server-addr: 192.168.2.112:8848
+        group: DEFAULT_GROUP
+      server-addr: 192.168.2.47:8848
