--- a/service/service-project/src/main/resources/bootstrap.yml
+++ b/service/service-project/src/main/resources/bootstrap.yml
@@ -2,9 +2,10 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 192.168.2.112:8848
         file-extension: yml
+        group: PMS_DEV
       discovery:
-        server-addr: 192.168.2.112:8848
+        group: PMS_DEV
+      server-addr: 192.168.2.112:8848
   application:
     name: project
